# DINOS

./: .gitignore  LICENSE  README.md  main.py  random_prompts.csv  random_prompts.json  random_prompts.pkl  requirements.txt  setup.py
DINOS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
benchmark/: benchmark_task.py  config.py  dinos.py  question.py
benchmark/constraints/: constraint.py  double_letter_constraint.py  element_count_constraint.py  element_frequency_constraint.py  (+7 more)
ifeval/: benchmark.ipynb  pyproject.toml
ifeval/ifeval/data/: input_data_mistral-7b-instruct:nitro_2024-03-09.jsonl
misc/: openrouter_utils.py  response_generator.py  wiki_topic_picker.py  xml_parser.py
randomizer/: constraint_gatherer.py  dinos_maker.py  evaluate_randomized_objects.py  run_randomizer.py
scripts/: pipeline.sh
tests/: test_benchmark_task.py  test_boolean_expression_problem.py  test_double_letter_constraint.py  test_dyck_language_problem.py  test_element_count_constraint.py  test_element_frequency_constraint.py  test_element_length_pattern_constraint.py  test_element_repetition_constraint.py  test_fibonacci_sequence_constraint.py  test_isogram_constraint.py  test_liar_problem.py  test_math_expression_problem.py  test_navigate_problem.py  test_output_format_constraint.py  test_palindrome_constraint.py  test_write_backwards_constraint.py
training_pipeline/: gather_to_same_format.py  generate_instruct.py  run_instruct_generate.py  run_same_format.py
utils/: count_elements.py  element_type.py  names.json  names.py  output_type.py  problem_type.py  split_elements.py
(+55 files in other folders)
