[tool.poetry]
name = "ifeval"
version = "0.1.0"
description = "Used to test various LLM models on IFEval benchmark."
authors = ["Daniel Gwon <dygwon@gmail.com>"]
license = "see root license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"
nltk = "^3.8.1"
langdetect = "^1.0.9"
immutabledict = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
